favorite offer integration tests (fix later tests in rest directory to work)