@@ -10,6 +10,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import org.apache.commons.beanutils.BeanComparator;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.r2dbc.convert.R2dbcConverter;
@@ -38,10 +39,9 @@ public interface UserRepository extends R2dbcRepository<User, Long>, UserReposit
 
     Mono<User> findOneByLogin(String login);
 
-    Flux<User> findAllByIdNotNull(Pageable pageable);
-
     Flux<User> findAllByIdNotNullAndActivatedIsTrue(Pageable pageable);
 
+    @NotNull
     Mono<Long> count();
 
     @Query("INSERT INTO jhi_user_authority VALUES(:userId, :authority)")
@@ -104,7 +104,7 @@ class UserRepositoryInternalImpl implements UserRepositoryInternal {
             )
             .all()
             .groupBy(t -> t.getT1().getLogin())
-            .flatMap(l -> l.collectList().map(t -> updateUserWithAuthorities(t.get(0).getT1(), t)))
+            .flatMap(l -> l.collectList().map(t -> updateUserWithAuthorities(t.getFirst().getT1(), t)))
             .sort(
                 Sort.Direction.fromString(direction) == Sort.DEFAULT_DIRECTION
                     ? new BeanComparator<>(property)
@@ -133,7 +133,7 @@ class UserRepositoryInternalImpl implements UserRepositoryInternal {
             .all()
             .collectList()
             .filter(l -> !l.isEmpty())
-            .map(l -> updateUserWithAuthorities(l.get(0).getT1(), l));
+            .map(l -> updateUserWithAuthorities(l.getFirst().getT1(), l));
     }
 
     private User updateUserWithAuthorities(User user, List<Tuple2<User, Optional<String>>> tuples) {
